# ClassifierInference

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
classifier_inference/: CMakeLists.txt
classifier_inference/src/: classifier_inference.cpp  classifier_inferencer.cpp
demo/: main.cpp
include/: classifier_inferencer.h
src/: classifier_inferencer.cpp  main.cpp  utils.cpp
